--- a/index.html
+++ b/index.html
@@ -474,6 +474,9 @@
             <a href="https://codepen.io/strevitz" class="contact-item"
               >codepen: @strevitz</a
             >
+            <a href="video-chat-chat-app/public/script.js" class="contact-item"
+              >video chat</a
+            >
           </div>
         </div>
       </section>
