--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       type="text/css"
     />
     <link rel="stylesheet" href="main.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
       async
@@ -53,13 +57,8 @@
           <div class="line"></div>
           <div class="line"></div>
         </div>
-        <h1 class="ml-3">
-          <a href="index.html"
-            ><img class="static" src="img/wink2.jpg" /><img
-              class="active"
-              src="img/wink.gif"
-            /><span>strzewiczek</span></a
-          >
+        <h1 class="ml-3 mt-1">
+          <a href="index.html"><span class="logo-text">strzewiczek</span></a>
         </h1>
         <ul class="nav-links">
           <li>
@@ -93,6 +92,11 @@
           <li>
             <a class="list-item" data-page="weather" href="weather.html"
               ><i class="fas fa-cloud-sun-rain"></i
+            ></a>
+          </li>
+          <li>
+            <a class="list-item" data-page="currency" href="currency.html"
+              ><i class="fa fa-money"></i
             ></a>
           </li>
           <div class="bubble"></div>
@@ -474,15 +478,19 @@
             <a href="https://codepen.io/strevitz" class="contact-item"
               >codepen: @strevitz</a
             >
-            <a href="video-chat-chat-app/public/script.js" class="contact-item"
-              >video chat</a
-            >
+            <a
+              href="https://strevitz-chat.netlify.app"
+              target="_blank"
+              class="contact-item my-4"
+              >or live chat <i class="fa fa-comments h1" aria-hidden="true"></i
+            ></a>
           </div>
         </div>
       </section>
 
       <footer class="quiz-footer">
-        <div class="footer-text-box">
+        <div class="footer-text-box d-flex flex-column mb-4">
+          <span class="logo-text">strzewiczek</span>
           <h6>
             Thank you for your visit my gorgeous friends! &copy; 2020 Arthur
             Strzewiczek
