--- a/quiz.html
+++ b/quiz.html
@@ -32,9 +32,13 @@
     />
     <link rel="stylesheet" href="main.css" type="text/css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
-      href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/bdf3eade00.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -47,16 +51,34 @@
           <div class="line"></div>
           <div class="line"></div>
         </div>
-        <h1 class="ml-3">
-          <a href="index.html"
-            ><img class="static" src="img/wink2.jpg" /><img
-              class="active"
-              src="img/wink.gif"
-            /><span>strevitz</span></a
-          >
+        <h1 class="ml-3 mt-1">
+          <a href="index.html"><span class="logo-text">strzewiczek</span></a>
         </h1>
         <ul class="nav-links">
-          <li><a data-page="contact" href="index.html">exit</a></li>
+          <li>
+            <a
+              id="link3"
+              class="list-item"
+              data-page="contact"
+              href="index.html"
+              >home</a
+            >
+          </li>
+          <li>
+            <a class="list-item" data-page="quiz" href="quiz.html"
+              ><i class="fas fa-question-circle"></i
+            ></a>
+          </li>
+          <li>
+            <a class="list-item" data-page="weather" href="weather.html"
+              ><i class="fas fa-cloud-sun-rain"></i
+            ></a>
+          </li>
+          <li>
+            <a class="list-item" data-page="currency" href="currency.html"
+              ><i class="fa fa-money"></i
+            ></a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -84,11 +106,12 @@
       </section>
 
       <footer class="quiz-footer">
-        <div class="footer-text-box">
-          <span
-            >Thank you for your visit my gorgeous friends! &copy; 2020 Arthur
-            Strzewiczek</span
-          >
+        <div class="footer-text-box d-flex flex-column mb-4">
+          <span class="logo-text">strzewiczek</span>
+          <h6>
+            Thank you for your visit my gorgeous friends! &copy; 2020 Arthur
+            Strzewiczek
+          </h6>
         </div>
       </footer>
     </main>
